[package]
name = "vade-evan"
version = "0.4.0"
authors = ["evan GmbH"]
edition = "2018"
license-file = "LICENSE.txt"
description = "zero-knowledge-proof VC and TnT DID handling for vade"
homepage = "https://github.com/evannetwork/vade-evan"
documentation = "https://docs.rs/crate/vade-evan"
repository = "https://github.com/evannetwork/vade-evan"
readme = "README.md"
keywords = ["did", "ssi", "vc", "zkp"]
build = "build.rs"

[lib]
name = "vade_evan"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "vade_evan_cli"
path = "src/main.rs"
required-features = ["target-cli"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
default = ["bundle-default", "target-cli"]

# plugins we want to be enabled by default
bundle-default = ["plugin-did-sidetree", "plugin-did-substrate", "plugin-didcomm", "plugin-jwt-vc", "plugin-vc-zkp-bbs"]

# plugins for sdk build, this feature should be enabled when plugin is compiled for IN3 sdk
bundle-sdk = ["capability-sdk", "plugin-did-sidetree", "plugin-vc-zkp-bbs"]

plugin-did-sidetree = ["capability-did-read", "capability-did-write", "vade-sidetree"]

plugin-did-substrate = ["capability-did-read", "capability-did-write", "plugin-signer", "vade-evan-substrate"]

plugin-didcomm = ["capability-didcomm", "vade-didcomm"]

plugin-jwt-vc = ["capability-vc-zkp", "plugin-signer", "vade-jwt-vc"]

plugin-signer = ["vade-signer"]

plugin-vc-zkp-bbs = ["base64", "bbs", "capability-vc-zkp", "flate2", "plugin-signer", "ssi", "vade-evan-bbs"]

# enable support for using the `c_lib` module to process requests
capability-c-lib = ["tokio", "vade-didcomm/portable"]

# enable didcomm related functions in targets
capability-didcomm = []

# enable did resolve in targets
capability-did-read = []

# enable did create and update in targets
capability-did-write = []

# enable sdk related features
capability-sdk = []

# enable vc related functiosn in targets
capability-vc-zkp = []

# build for consuming vade-evan from C
target-c-lib = ["capability-c-lib"]

# build for command line usage
target-cli = ["anyhow", "clap", "tokio", "vade-didcomm/portable"]

# build for consuming vade-evan from Java
target-java-lib = ["capability-c-lib"]

# build for usage in wasm
target-wasm = ["vade-didcomm/wasm", "vade-evan-bbs/wasm"]

############################################################################### generic dependencies
[dependencies]
async-trait = "0.1.31"
cfg-if = "0.1"
jni = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.53", features = ["preserve_order", "raw_value"] }
thiserror = "1.0.38"
vade = "0.1.0"

###################################################################### feature specific dependencies
# plugin-did-sidetree
[dependencies.vade-sidetree]
git = "https://github.com/evannetwork/vade-sidetree.git"
branch = "develop"
version = "0.0.3"
optional = true

# plugin-did-substrate
[dependencies.vade-evan-substrate]
version = "0.2.0"
optional = true

# plugin-didcomm
[dependencies.vade-didcomm]
git = "https://github.com/evannetwork/vade-didcomm.git"
branch = "develop"
optional = true

# plugin-jwt-vc
[dependencies.vade-jwt-vc]
version = "0.2.0"
optional = true

# plugin-signer
[dependencies.vade-signer]
version = "0.0.1"
optional = true

# plugin-vc-zkp-bbs
[dependencies.base64]
version = "0.13.0"
optional = true

[dependencies.bbs]
version = "0.4.1"
optional = true
default-features= false

[dependencies.flate2]
version = "1.0.20"
optional = true

[dependencies.vade-evan-bbs]
version = "0.3.0"
optional = true
default-features = false

[dependencies.ssi]
version = "0.5.0"
optional = true

# plugin-universal-resolver
[dependencies.vade-universal-resolver]
version = "0.0.4"
optional = true

# target-cli
[dependencies.anyhow]
version = "1.0.68"
optional = true

[dependencies.clap]
version = "2.33.1"
optional = true

# target-cli
[dependencies.tokio]
version = "=1.7.1"
optional = true
features = ["rt-multi-thread", "macros", "net", "time"]

####################################################################### target specific dependencies
[target.'cfg(any(target_arch = "x86_64-unknown-linux-gnu", target_arch = "x86_64-apple-darwin", target_arch = "aarch64-apple-darwin", target_arch = "x86_64-pc-windows-msvc"))'.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2", features = ["color"] }
log = "0.4.17"
serde_derive = "1.0.114"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.5"

############################################################################ generic dev dependencies
[dev-dependencies]
anyhow = "1.0.68"
tokio = { version = "=1.7.1", features = ["macros", "rt-multi-thread"] }

################################################################### target specific dev dependencies
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.12"

################################################################################# build dependencies
[build-dependencies]
serde = "1.0"
serde_derive = "1.0.114"
toml = "0.5.10"
